--- a/src/main/webapp/views/user/page/index.html
+++ b/src/main/webapp/views/user/page/index.html
@@ -191,7 +191,7 @@
                                                             <a class="same-action" href="wishlist.html" title="wishlist">
                                                                 <i class="fa fa-heart-o"></i>
                                                             </a>
-                                                            <a class="add_cart cart-item action-cart" href="cart.html" title="wishlist"><span>Add to cart</span></a>
+                                                            <a class="add_cart cart-item action-cart" th:href="@{'/cart/cart-home/'+ ${pr.productId}}" title="wishlist"><span>Add to cart</span></a>
                                                             <a class="same-action compare-mrg" data-bs-toggle="modal" data-bs-target="#productModal" href="compare.html">
                                                                 <i class="fa fa-sliders fa-rotate-90"></i>
                                                             </a>
