--- a/src/main/webapp/views/user/page/category.html
+++ b/src/main/webapp/views/user/page/category.html
@@ -177,51 +177,63 @@
                             <!-- Main Shop wrapper End -->
 
                             <!-- Pagination Start -->
-                            <div class="pagination-wrap mt--15 mt-md--10">
-                                <p class="page-ammount">Showing 1 to 9 of 15 (2 Pages)</p>
-                                <ul class="pagination">
-                                    <li><a href="#" class="first">|&lt;</a></li>
-                                    <li><a href="#" class="prev">&lt;</a></li>
-                                    <li><a href="#" class="current">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#" class="next">&gt;</a></li>
-                                    <li><a href="#" class="next">&gt;|</a></li>
-                                </ul>
-                            </div>
+<!--                            <div class="pagination-wrap mt&#45;&#45;15 mt-md&#45;&#45;10">-->
+<!--                                <p class="page-ammount">Showing 1 to 9 of 15 (2 Pages)</p>-->
+<!--                                <ul class="pagination">-->
+<!--                                    <li th:class="${currentPage == 1 ? 'page-item disabled' : 'page-item'}">-->
+<!--                                        <a  th:href="@{/menu-category(page=${currentPage - 1})}" aria-label="&laquo; Previous">-->
+<!--                                            <span aria-hidden="true">&laquo;</span>-->
+<!--                                        </a>-->
+<!--                                    </li>-->
+
+<!--                                    &lt;!&ndash; Page Numbers &ndash;&gt;-->
+<!--                                    <li th:each="pageNumber : ${#numbers.sequence(1, totalPages)}" th:class="${pageNumber == currentPage ? 'page-item active' : 'page-item'}">-->
+<!--                                        <a  th:href="@{/menu-category(page=${pageNumber})}" th:text="${pageNumber}"></a>-->
+<!--                                    </li>-->
+
+<!--                                    &lt;!&ndash; Next Button &ndash;&gt;-->
+<!--                                    <li th:class="${currentPage == totalPages ? 'page-item disabled' : 'page-item'}">-->
+<!--                                        <a th:href="@{/menu-category(page=${currentPage + 1})}" aria-label="Next &raquo;">-->
+<!--                                            <span aria-hidden="true">&raquo;</span>-->
+<!--                                        </a>-->
+<!--                                    </li>-->
+
+<!--                                </ul>-->
+<!--                            </div>-->
                             <!-- Pagination End -->
                         </div>
                         <div class="col-lg-3 order-lg-1">
                             <aside class="shop-sidebar">
                                 <div class="search-filter">
-                                    <div class="filter-price">
-                                        <h3 class="filter-heading">Price</h3>
-                                        <ul class="filter-list">
-                                            <li>
-                                                <div class="filter-input filter-radio">
-                                                        <input type="radio" name="pricerange" id="pricerange-1" checked>
-                                                    <label for="pricerange-1">$55 - $100 (3)</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="filter-input filter-radio">
-                                                    <input type="radio" name="pricerange" id="pricerange-2">
-                                                    <label for="pricerange-2">$55 - $200 (2)</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="filter-input filter-radio">
-                                                    <input type="radio" name="pricerange" id="pricerange-3">
-                                                    <label for="pricerange-3">$300 - $500 (6)</label>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="filter-input filter-radio">
-                                                    <input type="radio" name="pricerange" id="pricerange-4">
-                                                    <label for="pricerange-4">$700 - $1000 (2)</label>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
+<!--                                    <div class="filter-price">-->
+<!--                                        <h3 class="filter-heading">Price</h3>-->
+<!--                                        <ul class="filter-list">-->
+<!--                                            <li>-->
+<!--                                                <div class="filter-input filter-radio">-->
+<!--                                                        <input type="radio" name="pricerange" id="pricerange-1" checked>-->
+<!--                                                    <label for="pricerange-1">$55 - $100 (3)</label>-->
+<!--                                                </div>-->
+<!--                                            </li>-->
+<!--                                            <li>-->
+<!--                                                <div class="filter-input filter-radio">-->
+<!--                                                    <input type="radio" name="pricerange" id="pricerange-2">-->
+<!--                                                    <label for="pricerange-2">$55 - $200 (2)</label>-->
+<!--                                                </div>-->
+<!--                                            </li>-->
+<!--                                            <li>-->
+<!--                                                <div class="filter-input filter-radio">-->
+<!--                                                    <input type="radio" name="pricerange" id="pricerange-3">-->
+<!--                                                    <label for="pricerange-3">$300 - $500 (6)</label>-->
+<!--                                                </div>-->
+<!--                                            </li>-->
+<!--                                            <li>-->
+<!--                                                <div class="filter-input filter-radio">-->
+<!--                                                    <input type="radio" name="pricerange" id="pricerange-4">-->
+<!--                                                    <label for="pricerange-4">$700 - $1000 (2)</label>-->
+<!--                                                </div>-->
+<!--                                            </li>-->
+<!--                                        </ul>-->
+<!--                                    </div>-->
 
                                     <div class="filter-categories">
                                         <h3 class="filter-heading">Categories</h3>
